fixed navbar z-index

--- a/src/components/Navbar/index.module.scss
+++ b/src/components/Navbar/index.module.scss
@@ -7,7 +7,7 @@
   position: fixed;
   display: flex;
   right: 0;
-  z-index: 3;
+  z-index: 9999;
 
   :global(.ant-layout-header) {
     z-index: 9999;
